hphp/test/zend/bad/ext/spl/tests/iterator_061.php
<?php
class myParentIterator extends ParentIterator {
	
}
try {
	$it = new myParentIterator();	
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>